--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -14,9 +14,8 @@
 }
 
 .footer__content > hr {
-    border: 0.1px solid grey;
+    border: 0.1px solid rgb(78, 78, 78);
 }
-
 
 .footer__list {
     display: flex;
@@ -64,7 +63,7 @@
 }
 
 .footer__social > ul > li {
-    padding: 0.3rem;
+    padding: 0.4rem;
     font-size: 2.5rem;
 }
 
@@ -99,7 +98,7 @@
     }
 
     .footer__social > p {
-        padding-top: 2rem;
+        padding-top: 1rem;
     }
     
 }
