authentication development started, good progress, fixed the cookie isse with withCredentails attribute on axios

--- a/src/styles/components/AuthForm.css
+++ b/src/styles/components/AuthForm.css
@@ -44,6 +44,16 @@
     transition: all 0.2s ease-in-out;
 }
 
+.auth-form__info {
+    border-radius: 0.5rem;
+    padding: 0.6rem 1.7rem;
+    font-size: 1.2rem;
+    color: yellow;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: all 0.2s ease-in-out;
+}
+
 .auth-form__form > div button:hover {
     background-color: rgba(0, 0, 0, 0.6);
 }   
