--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -25,8 +25,14 @@
     color: white;
 }
 
-#footer__logo {
+#footer__logo > a {
+    color: white;
+    text-decoration: none;
     font-size: 2.2rem;
+}
+
+#footer__logo > a:hover {
+    text-decoration: underline;
 }
 
 .footer__items {
@@ -35,7 +41,7 @@
 }
 
 .footer__items > li  {
-    padding: 0.1rem;
+    padding: 0.4rem;
 }
 
 .footer__items > li > a {
@@ -80,6 +86,7 @@
         align-items: center;
         padding: 3rem;
     }
+
 
     .footer__items {
         padding-top: 2rem;
