--- a/src/styles/screens/Profile.css
+++ b/src/styles/screens/Profile.css
@@ -8,13 +8,22 @@
     background-color: rgb(180, 92, 33);
 }
 
+.profile__content > p {
+    text-align: center;
+    color: white;
+    padding: 1rem;
+    font-size: 2rem;
+    padding-left: 20%;
+    width: 80%;
+}
+
 .profile__unauthorized {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: rgb(180, 92, 33);
-    padding: 8rem;  
+    padding-top: 6rem;  
     width: 100%;
 }
 
@@ -48,14 +57,17 @@
 }
 
 .profile__auth-buttons {
-    border: 1px solid black;
+
     width: 100%;
     text-align: center;
-    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profile__auth-buttons > button {
-
+    margin: 2rem;
+    cursor: pointer;
     border: none;
     padding: 1rem;
     font-size: 2rem;
@@ -69,7 +81,7 @@
     }
 
     .profile__unauthorized {
-        padding: 6rem 0rem;
+        padding: 5rem 0rem 0rem 0rem;
     }
 
     .profile__unauthorized > iframe {
@@ -85,7 +97,7 @@
     .profile__profile-info {
         padding: 1rem;
         width: 80%;
-        margin-top: 4rem;
+        margin-top: 1rem;
         margin-left: 10%;
     }
 
@@ -93,5 +105,13 @@
         font-size: 1.4rem;
     }
         
+    .profile__auth-buttons {
+        flex-direction: column;
+
+    }
+
+    .profile__auth-buttons > button {
+        margin: 1rem;
+    }
     
 }
