--- a/src/styles/screens/Vote.css
+++ b/src/styles/screens/Vote.css
@@ -2,3 +2,68 @@
     padding: 3rem 0rem 15rem 0rem;
     background-color: rgb(180, 92, 33);
 }
+
+.vote__info {
+    text-align: center;
+    border-radius: 0.5rem;
+    padding: 0.6rem 1.7rem;
+    font-size: 1.2rem;
+    color: yellow;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.3);
+    transition: all 0.2s ease-in-out;
+}
+
+.vote__unauthorized {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 6rem;  
+    width: 100%;
+}
+
+.vote__unauthorized > iframe {
+    width: 384px;
+    height: 283px;
+}
+
+.vote__unauthorized > p {
+    font-size: 2rem;
+    color: white;
+    padding-top: 4rem;
+}
+
+.vote__vote  {
+    padding: 2rem 0rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.vote__vote h1 {
+
+    padding: 2rem 0rem;
+    color: white;
+}
+
+.vote__vote-option {
+
+    padding: 0.6rem 1.2rem;
+    margin: 0.5rem;
+    border-radius: 0.5rem;
+    color: white;
+    font-size: 1.2rem;
+    transition: all 0.2s ease-out;
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.vote__vote-option:hover {
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#vote-value {
+    color: yellow;
+}
