--- a/src/styles/screens/User.css
+++ b/src/styles/screens/User.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    margin: 2rem 0rem;
+    margin: 3rem 0rem 0rem 0rem;
     text-align: center;
 }
 
@@ -45,7 +45,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 2rem 0rem;
+    padding: 1rem 0rem;
+
 }
 
 .user__props > h1{
