--- a/src/styles/components/Header.css
+++ b/src/styles/components/Header.css
@@ -5,7 +5,11 @@
     list-style: none;
 }
 
-.header__content > div > h1 {
+.header__content a{
+    text-decoration: none;
+}
+
+.header__content > div h1 {
     padding: 1rem;
     font-size: 4rem;
     color: rgb(180, 92, 33);
